# ransac_comparison

./: CMakeLists.txt  README.md  package.xml
data/: points.txt  pyransac_pcl.txt  ransac1.txt  ransac2.txt  ransac2_1.txt  ransac2_2.txt  ransac2_3.txt  ransac3_1.txt  ransac3_2.txt  ransac3_3.txt  ransac3_new_0.2.txt  ransac3_new_0.3.txt  ransac3_new_0.4.txt  ransac3_new_0.txt  ransac50_1.txt  ransac50_2.txt  ransac50_3.txt  ransac6_1.txt  ransac6_2.txt  ransac6_3.txt  ransac_0410_1.txt  ransac_0410_2.txt  ransac_0410_3.txt  ransac_lo.txt  ransac_new.txt  ransac_new2.txt  ransac_pcl2_1.txt  ransac_pcl2_2.txt  ransac_pcl2_3.txt  ransac_pcl_1.txt  ransac_pcl_2.txt  ransac_pcl_3.txt
data/rot/: points_10.txt  points_11.txt  points_12.txt  points_13.txt  points_14.txt  points_2.txt  points_3.txt  points_4.txt  points_5.txt  points_7.txt  points_8.txt  points_9.txt
include/ransac_comparison/: omp.h  pyransac.h  pyransac2.h  pyransac_pcl.h  pyransac_pcl_impl.h  ransac.h  ransac.hpp  sac.h  sac_model.h  sac_model_cuboid.h  sac_model_cuboid.hpp  sac_model_plane.h  sac_model_plane.hpp  sac_segmentation.h  sac_segmentation.hpp
launch/: ransac.launch
scripts/: depth_check.py  depth_plane.py  plot.py
src/: error.cpp  pointcloud_generator.cpp  pointcloud_visualizer.cpp  ransac1.cpp  ransac2.cpp  ransac3.cpp  ransac_new.cpp  ransac_pcl.cpp
